--- a/feedback.html
+++ b/feedback.html
@@ -33,7 +33,7 @@
                 <ul class="menu__nav">
                   <li class="menu__item"><a href="index.html">Головна</a></li>
                   <li class="menu__item"><a href="about-us.html">Про нас</a></li>
-                  <li class="menu__item"><a href="tutors.html">Ментори</a></li>
+                  <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
                   <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
                 </ul>
                 <div class="header__items">
@@ -51,7 +51,7 @@
               <ul class="menu__nav">
                 <li class="menu__item"><a href="index.html">Головна</a></li>
                 <li class="menu__item"><a href="about-us.html">Про нас</a></li>
-                <li class="menu__item"><a href="tutors.html">Ментори</a></li>
+                <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
                 <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
               </ul>
               <div class="header__items">
@@ -111,13 +111,13 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">Навчання в N-Code дуже сподобалось. Викладачі мають професійний...</p>
+                <p class="tutors-card__description">Навчання в N-Code дуже сподобалось. Репетитори мають професійний...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Михайло</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
@@ -146,7 +146,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Олексій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
@@ -173,7 +173,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Владислав</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
@@ -202,7 +202,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Сергій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
@@ -229,7 +229,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Яна</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
@@ -258,7 +258,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Андрій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="6">Відгук повністю</a>
@@ -287,7 +287,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Руслан</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="7">Відгук повністю</a>
@@ -316,7 +316,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Андрій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="8">Відгук повністю</a>
@@ -337,7 +337,7 @@
               <p class="footer__title">N-Code</p>
               <ul class="footer__list">
                 <li><a href="about-us.html">Про нас</a></li>
-                <li><a href="tutors.html">Викладачі</a></li>
+                <li><a href="tutors.html">Репетитори</a></li>
                 <li><a href="feedback.html">Відгуки</a></li>
               </ul>
             </div>
@@ -350,7 +350,7 @@
             </div>
             <div class="col">
               <p class="footer__title">Співробітництво</p>
-              <button class="btn footer__btn became-mentor">Стати ментором</button>
+              <button class="btn footer__btn became-mentor">Стати репетитором</button>
             </div>
           </div>
           <div class="footer__social">
@@ -402,7 +402,7 @@
                     class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
                     class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
             </div>
-            <p class="feedback-popup__text">Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре 
+            <p class="feedback-popup__text">Навчання в N-Code дуже сподобалось. Репетитори мають професійний підхід, дуже добре 
                 пояснюють матеріал, доброзичливі. 
                 Графік навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням</p>
             <div class="feedback-popup__item">
@@ -410,7 +410,7 @@
                 <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
-                <p>Викладач:</p>
+                <p>Репетитор:</p>
                 <p>Михайло
                 </p>
             </div>
@@ -433,7 +433,7 @@
                 <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
-                <p>Викладач:</p>
+                <p>Репетитор:</p>
                 <p>Владислав
                 </p>
             </div>
@@ -456,7 +456,7 @@
                 <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
-                <p>Викладач:</p>
+                <p>Репетитор:</p>
                 <p>Олексій
                 </p>
             </div>
@@ -480,7 +480,7 @@
                 <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
-                <p>Викладач:</p>
+                <p>Репетитор:</p>
                 <p>Сергій
                 </p>
             </div>
@@ -503,7 +503,7 @@
                 <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
-                <p>Викладач:</p>
+                <p>Репетитор:</p>
                 <p>Яна
                 </p>
             </div>
@@ -529,7 +529,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Андрій</p>
         </div>
       </div>
@@ -554,7 +554,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Руслан</p>
         </div>
       </div>
@@ -579,45 +579,45 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Андрій</p>
         </div>
       </div>
     </div>
 
     <div class="popup popap-templ became-mentor-popup">
-        <div class="popup-body">
-          <div class="popup__close"></div>
-          <div class="popup__title-group">
-            <h2 class="popup__title">Стати ментором</h2>
-            <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
-          </div>
-          <a class="back-link">Назад </a>
-          <form class="form" action="POST" id="feedbackForm">
-            <label class="required" for="name">
-              <input type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
-            </label>
-            <label class="required" for="phone">
-              <input type="phone" name="phone" placeholder="Номер телефону" required="required" />
-            </label>
-            <label class="required" for="email">
-              <input type="email" name="email" placeholder="E-mail" required="required" />
-            </label>
-            <div class="input-wrapper">
-              <label class="required file-upload" for="file">
-                <span class="placeholder">Прикріпити файл з резюме</span>
-                <input id="file" class="file" type="file" name="file" accept=".pdf" required="required" />
-              </label>
-              <label class="required" for="linkedIn">
-                <input type="text" name="linkedIn" placeholder="LinkedIn" required="required" />
-              </label>
-            </div>
-            <textarea name="comment" placeholder="Коментар (не обов’язково)"></textarea>
-            <div class="form__btn">
-              <button class="btn" type="submit">Надіслати заявку</button>
-            </div>
-          </form>
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="popup__title-group">
+          <h2 class="popup__title">Стати репетитором</h2>
+          <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
         </div>
+        <a class="back-link">Назад </a>
+        <form class="form" action="POST" id="mentorForm">
+          <label class="required" for="name">
+            <input class="name" type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
+          </label>
+          <label class="required" for="phone">
+            <input class="phone" type="phone" name="phone" placeholder="Номер телефону" required="required" />
+          </label>
+          <label class="required" for="email">
+            <input class="email" type="email" name="email" placeholder="E-mail" required="required" />
+          </label>
+          <div class="input-wrapper">
+            <label class="required file-upload" for="file">
+              <span class="placeholder">Прикріпити файл з резюме</span>
+              <input id="file" class="file" type="file" name="attachment" accept=".pdf" required="required" />
+            </label>
+            <label for="linkedIn">
+              <input class="link" type="text" name="linkedIn" placeholder="LinkedIn" />
+            </label>
+          </div>
+          <textarea class="comment" name="comment" placeholder="Коментар (не обов’язково)"></textarea>
+          <div class="form__btn">
+            <button class="btn" type="submit">Надіслати заявку</button>
+          </div>
+        </form>
+      </div>
     </div>
     <script src="js/nice-select2.js"></script>
     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
