--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="menu__nav">
             <li class="menu__item"><a href="#">Головна</a></li>
             <li class="menu__item"><a href="about-us.html">Про нас</a></li>
-            <li class="menu__item"><a href="tutors.html">Ментори</a></li>
+            <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
             <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
           </ul>
           <div class="header__items">
@@ -53,7 +53,7 @@
         <ul class="menu__nav">
           <li class="menu__item"><a href="#">Головна</a></li>
           <li class="menu__item"><a href="about-us.html">Про нас</a></li>
-          <li class="menu__item"><a href="tutors.html">Ментори</a></li>
+          <li class="menu__item"><a href="tutors.html">Репетитори</a></li>
           <li class="menu__item"><a href="feedback.html">Відгуки</a></li>
         </ul>
         <div class="header__items">
@@ -97,7 +97,7 @@
     </header>
     <div class="slider">
       <div class="slide">
-        <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм ментором</h1>
+        <h1 class="title"><span class="logo-title">N-CODE</span> - Місце зустрічі з твоїм репетитором</h1>
         <a class="btn slide__btn" href="#callback-section">Замовити консультацію</a>
       </div>
     </div>
@@ -109,7 +109,7 @@
               <p class="header-card__title">Допомогаємо розібратись у Front-End</p>
               <span class="header-card__arrow"></span>
             </div>
-            <p class="header-card__text">Навчання з менторами з 0 до профі, навчання для дітей</p>
+            <p class="header-card__text">Навчання з репетиторами з 0 до профі, навчання для дітей</p>
           </div>
           <div class="header-card">
             <div class="header-card__title-wrap">
@@ -123,7 +123,7 @@
               <p class="header-card__title">Ефективність та швидкий ріст</p>
               <span class="header-card__arrow"></span>
             </div>
-            <p class="header-card__text">Навчання один на один з ментором, 80% практики 20% теорії, розбір коду</p>
+            <p class="header-card__text">Навчання один на один з репетитором, 80% практики 20% теорії, розбір коду</p>
           </div>
           <div class="mob_block">
             <div class="header-card">
@@ -135,7 +135,7 @@
                 <li>Хочеш розібратись у Javascript, React, та супутніх технологіях(Redux, MobX, React Query, Apollo GraphQl)?</li>
                 <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
                 <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
-                <li>Ваша дитина хоче вчитись програмувати і потрібен професійний ментор?</li>
+                <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
                 <li>Потрібне кодрев'ю чи допомога з Pet проектом?</li>
                 <li>Хочеш отримати нову високооплачувану професію, але не знаєш з чого почати?</li>
               </ul>
@@ -150,7 +150,7 @@
               <p class="header-card__title">Допомогаємо розібратись у Front-End</p>
               <span class="header-card__arrow"></span>
             </div>
-            <p class="header-card__text">Навчання з менторами з 0 до профі, навчання для дітей</p>
+            <p class="header-card__text">Навчання з репетиторами з 0 до профі, навчання для дітей</p>
           </div>
           <div class="header-card">
             <div class="header-card__title-wrap">
@@ -164,7 +164,7 @@
               <p class="header-card__title">Ефективність та швидкий ріст</p>
               <span class="header-card__arrow"></span>
             </div>
-            <p class="header-card__text">Навчання один на один з ментором, 80% практики 20% теорії, розбір коду</p>
+            <p class="header-card__text">Навчання один на один з репетитором, 80% практики 20% теорії, розбір коду</p>
           </div>
         </div>
       </div>
@@ -182,7 +182,7 @@
               <li>Хочеш розібратись у Javascript, React, та супутніх технологіях(Redux, MobX, React Query, Apollo GraphQl)?</li>
               <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
               <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
-              <li>Ваша дитина хоче вчитись програмувати і потрібен професійний ментор?</li>
+              <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
               <li>Потрібне кодрев'ю чи допомога з Pet проектом?</li>
               <li>Хочеш отримати нову високооплачувану професію, але не знаєш з чого почати?</li>
             </ul>
@@ -194,7 +194,7 @@
         <div class="container">
           <div class="advantages__item">
             <span class="item__num">01</span>
-            <p>Наші викладачі мають практичний досвід в IT від 1 до 10 років</p>
+            <p>Наші репетитори мають практичний досвід в IT від 1 до 10 років</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">02</span>
@@ -229,7 +229,7 @@
       <section class="tutors">
         <div class="section-title-wrap">
           <h2 class="section-title">Наші репетитори</h2>
-          <a class="more-info-link" href="tutors.html">Всі ментори</a>
+          <a class="more-info-link" href="tutors.html">Всі репетитори</a>
         </div>
         <div class="tutors-card__wrap">
           <div class="tutors-card">
@@ -433,8 +433,8 @@
                 <p class="slider-step">Крок 2</p>
                 <p class="slider-title">Зв’язок з менеджером</p>
                 <p class="slider-text">
-                  На даному етапі менеджер допомагає підібрати ментора в залежності від рівня знань студента та кваліфікації ментора.
-                  Менеджер платформи N-Code узгоджує зі студентом та ментором вільну дату та час для проведення пробного 30 хвилинного
+                  На даному етапі менеджер допомагає підібрати репетитора в залежності від рівня знань студента та кваліфікації репетитора.
+                  Менеджер платформи N-Code узгоджує зі студентом та репетитором вільну дату та час для проведення пробного 30 хвилинного
                   онлайн-заняття. ‌
                 </p>
               </div>
@@ -442,14 +442,14 @@
                 <p class="slider-step">Крок 3</p>
                 <p class="slider-title">Тестування</p>
                 <p class="slider-text">
-                  Пройти 30 хвилинне онлайн-тестування напряму з репетитором На даному етапі ментор (репетитор) проводить тестування рівня
+                  Пройти 30 хвилинне онлайн-тестування напряму з репетитором На даному етапі репетитор проводить тестування рівня
                   знань студента, надає рекомендації та консультує щодо подальших уроків.
                 </p>
               </div>
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 4</p>
                 <p class="slider-title">Реєстрація</p>
-                <p class="slider-text">Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
+                <p class="slider-text">Студент може самостійно обирати дату та час заняття з репетитором у власному онлайн-кабінеті.</p>
               </div>
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 5</p>
@@ -463,7 +463,7 @@
                 <p class="slider-step">Крок 6</p>
                 <p class="slider-title">Підготовка до роботи</p>
                 <p class="slider-text">
-                  Отримати рекомендаційний лист + шаблон резюме для програміста. Ментор з онлайн-платформи N-Code за потреби може надати
+                  Отримати рекомендаційний лист + шаблон резюме для програміста. Репетитор з онлайн-платформи N-Code за потреби може надати
                   рекомендаційний лист про отримані знання та навички студента.
                 </p>
               </div>
@@ -566,13 +566,13 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">Навчання в N-Code дуже сподобалось. Викладачі мають професійний...</p>
+                <p class="tutors-card__description">Навчання в N-Code дуже сподобалось. Репетитори мають професійний...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Михайло</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
@@ -601,7 +601,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Олексій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
@@ -628,7 +628,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Владислав</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
@@ -650,14 +650,14 @@
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор.
+                  Навчання йде не погано. Займаюсь з Сергієм, дуже хороший репетитор.
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Сергій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
@@ -684,7 +684,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Яна</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
@@ -713,7 +713,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Андрій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="6">Відгук повністю</a>
@@ -742,7 +742,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Руслан</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="7">Відгук повністю</a>
@@ -771,7 +771,7 @@
                   <p>Front-End</p>
                 </div>
                 <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
+                  <p>Репетитор:</p>
                   <p>Андрій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="8">Відгук повністю</a>
@@ -788,7 +788,7 @@
             <div class="accordion__header">Яка тривалість навчання?</div>
             <div class="accordion__content">
               <strong>Відповідь: </strong>Тривалість навчання залежить від ваших початкових навичок та індивідуального темпу освоєння
-              матеріалу. За перші 3 місяці навчання будуть базові знання, через 6 місяців буде хороша база, інший час це практика
+              матеріалу. За перші 3 місяці навчання будуть базові знання, через 6 місяців буде хороша база, інший час - це практика
               (рекомендується від 3х до 6 місяців).
             </div>
           </div>
@@ -802,7 +802,7 @@
           <div class="accordion__item">
             <div class="accordion__header">Чи є у вас сертифікати або дипломи після закінчення курсу?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Так, ми надаємо сертифікати та рекомендації від викладачів після успішного закінчення курсу. Вони
+              <strong>Відповідь: </strong> Так, ми надаємо сертифікати та рекомендації від репетиторів після успішного закінчення курсу. Вони
               не тільки підтверджують отримані знання та навички, а й можуть бути корисними при подальшому пошуку роботи.
             </div>
           </div>
@@ -811,7 +811,7 @@
             <div class="accordion__content">
               <strong>Відповідь: </strong> Ми надаємо підтримку в працевлаштуванні для наших випускників, а саме: допомагаємо скласти
               релевантне резюме, надаємо сертифікат та рекомендаційний лист, який не тільки підтверджує отримані знання та навички, а і
-              підвищить шанси знайти роботу. Наші викладачі мають багатий практичний досвід на реальних проектах і готові поділитись ним з
+              підвищить шанси знайти роботу. Наші репетитори мають багатий практичний досвід на реальних проектах і готові поділитись ним з
               вами.
             </div>
           </div>
@@ -823,9 +823,9 @@
             </div>
           </div>
           <div class="accordion__item">
-            <div class="accordion__header">Яка кваліфікація у ваших викладачів?</div>
+            <div class="accordion__header">Яка кваліфікація у ваших репетиторів?</div>
             <div class="accordion__content">
-              <strong>Відповідь: </strong> Працюємо з викладачами, які мають практичний досвід від 1- 10 років у провідних ІТ - компаніях,
+              <strong>Відповідь: </strong> Працюємо з репетиторами, які мають практичний досвід від 1- 10 років у провідних ІТ - компаніях,
               такі як: Luxoft, Uber, GlobalLogic, Plarium, N-iX та інші.
             </div>
           </div>
@@ -833,7 +833,7 @@
             <div class="accordion__header">Як відбувається оплата?</div>
             <div class="accordion__content">
               <strong>Відповідь: </strong> Оплата відбувається на нашій платформі у розділі “гаманець” через платіжну систему LiqPay . Також
-              є можливіть відвідати пробний урок, де ви з викладачем познайомитеся та обговорити деталі навчання.
+              є можливіть відвідати пробний урок, де ви з репетитором познайомитеся та обговорити деталі навчання.
             </div>
           </div>
         </div>
@@ -877,7 +877,7 @@
             <p class="footer__title">N-Code</p>
             <ul class="footer__list">
               <li><a href="about-us.html">Про нас</a></li>
-              <li><a href="tutors.html">Викладачі</a></li>
+              <li><a href="tutors.html">Репетитори</a></li>
               <li><a href="feedback.html">Відгуки</a></li>
             </ul>
           </div>
@@ -890,7 +890,7 @@
           </div>
           <div class="col">
             <p class="footer__title">Співробітництво</p>
-            <button class="btn footer__btn became-mentor">Стати ментором</button>
+            <button class="btn footer__btn became-mentor">Стати репетитором</button>
           </div>
         </div>
         <div class="footer__social">
@@ -1158,7 +1158,7 @@
           ><i class="mentors__star fa-solid fa-star"></i>
         </div>
         <p class="feedback-popup__text">
-          Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре пояснюють матеріал, доброзичливі. Графік
+          Навчання в N-Code дуже сподобалось. Репетитори мають професійний підхід, дуже добре пояснюють матеріал, доброзичливі. Графік
           навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням.
         </p>
         <div class="feedback-popup__item">
@@ -1166,7 +1166,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Михайло</p>
         </div>
       </div>
@@ -1189,7 +1189,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Владислав</p>
         </div>
       </div>
@@ -1212,7 +1212,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Олексій</p>
         </div>
       </div>
@@ -1230,14 +1230,14 @@
           ><i class="mentors__star fa-solid fa-star"></i>
         </div>
         <p class="feedback-popup__text">
-          Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. 
+          Навчання йде не погано. Займаюсь з Сергієм, дуже хороший репетитор. 
         </p>
         <div class="feedback-popup__item">
           <p>Курс:</p>
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Сергій</p>
         </div>
       </div>
@@ -1260,7 +1260,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Яна</p>
         </div>
       </div>
@@ -1285,7 +1285,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Олексій</p>
         </div>
       </div>
@@ -1310,7 +1310,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Руслан</p>
         </div>
       </div>
@@ -1335,7 +1335,7 @@
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
-          <p>Викладач:</p>
+          <p>Репетитор:</p>
           <p>Андрій</p>
         </div>
       </div>
@@ -1344,7 +1344,7 @@
       <div class="popup-body">
         <div class="popup__close"></div>
         <div class="popup__title-group">
-          <h2 class="popup__title">Стати ментором</h2>
+          <h2 class="popup__title">Стати репетитором</h2>
           <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
         </div>
         <a class="back-link">Назад </a>
