added meta tags for preview page

--- a/tutors.html
+++ b/tutors.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
+    <meta property="og:description" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
+    <meta property="og:url" content="https://n-code.study/">
+    <meta property="og:image" content="img/preview-img.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
