feat: add seo metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Pragma" content="no-cache">
     <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
+    <meta name="title" content="Навчання з репетитором з нуля до профі | N-CODE">
+    <meta name="description" content="Front-end, Phyton, QA та інші напрямки - ефективне навчання за допомогою персонального репетитора ☎ +38 (068)-627-27-27">
+    <meta name="keywords" content="репетитор, навчання">
 
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
